About Section Mobile fix and Added Event listeners to Modal

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -2,8 +2,6 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
   background-color: white;
 }
 
@@ -12,12 +10,19 @@
   font-size: 40px;
   font-weight: 700;
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  justify-self: flex-start;
+  align-self: center;
 }
 
 .aboutMe {
+  font-size: 15px;
+  text-align: center;
   margin: 0 40px;
   line-height: 2;
+  padding-bottom: 20px;
+  justify-self: center;
+  align-self: center;
 }
 
 @media screen and (min-width: 1025px) {
