--- a/src/styles/accordian.module.css
+++ b/src/styles/accordian.module.css
@@ -15,6 +15,7 @@
   background-image: linear-gradient(90deg, #eee, #f5f5f5, #eee);
   padding: 1em;
   color: black;
+  box-shadow: 1px 3px 4px 1px;
 }
 
 .accordian h1 {
@@ -24,7 +25,7 @@
 
 .accordian:hover .accordianItem:hover .accordianItemContent,
 .accordian .accordion-item--default .accordianItemContent {
-  height: 6em;
+  height: 7em;
 }
 
 .accordianItemContent,
