--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -40,7 +40,7 @@
 
 nav {
   padding: 30px;
-  margin-bottom: 50px;
+  margin-bottom: 80px;
 }
 
 @media screen and (min-width: 1025px) {
