--- a/src/styles/intro.module.css
+++ b/src/styles/intro.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   height: 80vh;
   margin-left: 30px;
-  margin-top: 90px;
   text-align: left;
   line-height: 2;
 }
