--- a/src/styles/menu.module.css
+++ b/src/styles/menu.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   font-size: 1.7em;
   background: var(--modal-bg-color);
-  height: 100vh;
+  height: 110vh;
   top: 0;
   left: 0;
   width: 100vw;
